# dwf-toolkit

./: README.md  readmefirst.htm
develop/global/src/dwf/: Makefile.am  Toolkit.cpp  Toolkit.h  Version.h  resource.h
develop/global/src/dwf/XAML/: Makefile.am  MemoryBuffer.h  OpcResourceMaterializer.h  OpcResourceSerializer.h  XamlArcSegment.cpp  XamlArcSegment.h  XamlAttribute.h  XamlAttribute_Url.cpp  XamlAttribute_Url.h  XamlBrushes.cpp  XamlBrushes.h  XamlCanvas.cpp  XamlCanvas.h  XamlClassFactory.cpp  XamlClassFactory.h  XamlCode_Page.cpp  XamlCode_Page.h  XamlColor.cpp  XamlColor.h  XamlColorMap.cpp  (+142 more)
develop/global/src/dwfcore/: BufferInputStream.cpp  BufferInputStream.h  BufferOutputStream.cpp  BufferOutputStream.h  Comparator.h  CompileConfig.h  Core.h  CountedObject.h  DWFCompressingInputStream.cpp  DWFCompressingInputStream.h  DWFDecryptingInputStream.cpp  DWFDecryptingInputStream.h  DWFEncryptingInputStream.cpp  DWFEncryptingInputStream.h  DWFXMLSerializer.cpp  DWFXMLSerializer.h  DecompressingInputStream.cpp  DecompressingInputStream.h  Digest.cpp  Digest.h  DigestInputStream.cpp  DigestInputStream.h  DigestOutputStream.cpp  DigestOutputStream.h  Exception.cpp  Exception.h  File.cpp  File.h  FileDescriptor.h  FileInputStream.cpp  FileInputStream.h  FileOutputStream.cpp  FileOutputStream.h  Hash.h  InputStream.h  Iterator.h  MIME.cpp  MIME.h  Makefile.am  MonitoredInputStream.cpp  (+34 more)
samples/DWFToolkit/GlobalSectionWriter/: GlobalSectionWriter.cpp  GlobalSectionWriter_Prefix.pch  GlobalSectionWriter_vc100.sln  GlobalSectionWriter_vc100.vcxproj  GlobalSectionWriter_vc100.vcxproj.filters  GlobalSectionWriter_vc80.sln  GlobalSectionWriter_vc80.vcproj  GlobalSectionWriter_vc90.sln  GlobalSectionWriter_vc90.vcproj  Makefile.am  configure.in  notes.txt  stdafx.h
samples/DWFToolkit/GlobalSectionWriter/GlobalSectionWriter.xcodeproj/: project.pbxproj
samples/DWFToolkit/ObjectDefinitionReader/: Arbor Press 3D.dwf  Makefile.am  ObjectDefinitionReader_Prefix.pch  ObjectDefinitionReader_vc100.sln  ObjectDefinitionReader_vc100.vcxproj  ObjectDefinitionReader_vc100.vcxproj.filters  ObjectDefinitionReader_vc80.sln  ObjectDefinitionReader_vc80.vcproj  ObjectDefinitionReader_vc90.sln  ObjectDefinitionReader_vc90.vcproj  ReadObjectDefinition.cpp  configure.in  notes.txt  stdafx.h
samples/DWFToolkit/ObjectDefinitionReader/ObjectDefinitionReader.xcodeproj/: project.pbxproj
samples/DWFToolkit/PublishMetadata/: Makefile.am  PublishMetadata.cpp  PublishMetadata_Prefix.pch  PublishMetadata_vc100.sln  PublishMetadata_vc100.vcxproj  PublishMetadata_vc100.vcxproj.filters  PublishMetadata_vc80.sln  PublishMetadata_vc80.vcproj  PublishMetadata_vc90.sln  PublishMetadata_vc90.vcproj  configure.in  notes.txt
samples/DWFToolkit/PublishMetadata/PublishMetadata.xcodeproj/: project.pbxproj
samples/DWFToolkit/SimpleEPlotWriter/: Makefile.am  SimpleEPlotWriter.cpp  SimpleEPlotWriter_Prefix.pch  SimpleEPlotWriter_UTF8.cpp  SimpleEPlotWriter_vc100.sln  SimpleEPlotWriter_vc100.vcxproj  SimpleEPlotWriter_vc100.vcxproj.filters  SimpleEPlotWriter_vc80.sln  SimpleEPlotWriter_vc80.vcproj  SimpleEPlotWriter_vc90.sln  SimpleEPlotWriter_vc90.vcproj  configure.in  notes.txt  ocean_90.w2d  stdafx.h
samples/DWFToolkit/SimpleEPlotWriter/SimpleEPlotWriter.xcodeproj/: project.pbxproj
samples/DWFToolkit/SimpleEnumReader/: 1 - IRD Addition.dwf  Makefile.am  SimpleEnumReader.cpp  SimpleEnumReader_Prefix.pch  SimpleEnumReader_vc100.sln  SimpleEnumReader_vc100.vcxproj  SimpleEnumReader_vc100.vcxproj.filters  SimpleEnumReader_vc80.sln  SimpleEnumReader_vc80.vcproj  SimpleEnumReader_vc90.sln  SimpleEnumReader_vc90.vcproj  configure.in  notes.txt  stdafx.h
samples/DWFToolkit/SimpleEnumReader/SimpleEnumReader.xcodeproj/: project.pbxproj
samples/DWFToolkit/SimpleW3DStreamProcessor/: Makefile.am  SimpleW3DStreamProcessor.cpp  SimpleW3DStreamProcessor_Prefix.pch  SimpleW3DStreamProcessor_vc100.sln  SimpleW3DStreamProcessor_vc100.vcxproj  SimpleW3DStreamProcessor_vc100.vcxproj.filters  SimpleW3DStreamProcessor_vc80.sln  SimpleW3DStreamProcessor_vc80.vcproj  SimpleW3DStreamProcessor_vc90.sln  SimpleW3DStreamProcessor_vc90.vcproj  configure.in  notes.txt  stdafx.cpp  stdafx.h
samples/DWFToolkit/SimpleW3DStreamProcessor/SimpleW3DStreamProcessor.xcodeproj/: project.pbxproj
samples/DWFToolkit/SimpleXPSPublisher/: Makefile.am  SimpleXPSPublisher.cpp  SimpleXPSPublisher_Prefix.pch  SimpleXPSPublisher_vc100.sln  SimpleXPSPublisher_vc100.vcxproj  SimpleXPSPublisher_vc100.vcxproj.filters  SimpleXPSPublisher_vc80.sln  SimpleXPSPublisher_vc80.vcproj  SimpleXPSPublisher_vc90.sln  SimpleXPSPublisher_vc90.vcproj  configure.in  line.w2x  line.xml  notes.txt  stdafx.h
samples/DWFToolkit/SimpleXPSPublisher/SimpleXPSPublisher.xcodeproj/: project.pbxproj
samples/DWFToolkit/W2dTest_Mac_Linux/: FontSubset.cpp  Makefile.am  OpcHelper.cpp  OpcHelper.h  StdAfx.h  TestFramework.h  W2DTest.ini  W2dTest.cpp  W2dTest.h  W2dTest_Prefix.pch  WhipClassFactoryWrapper.cpp  WhipClassFactoryWrapper.h  color_map.cpp  configure.in  contour_set.cpp  dash_patterns.cpp  drawing_info.cpp  embedded_font.cpp  gouraud_polyline.cpp  gouraud_polytriangle.cpp  image.cpp  macro.cpp  notes.txt  obFont.cpp  object_node.cpp  overpost.cpp  polygon.cpp  polyline.cpp  polymarker.cpp  test_list.h  text.cpp  text_background.cpp  user_fill_pattern.cpp  userdata.cpp
samples/DWFToolkit/W2dTest_Mac_Linux/W2dTest.xcodeproj/: project.pbxproj
samples/DWFToolkit/XPSTest_Mac_Linux/: Makefile.am  OpcHelper.cpp  StdAfx.cpp  StdAfx.h  TestFramework.cpp  XPSTest.cpp  XPSTest.h  XPSTest_Prefix.pch  color_map.cpp  configure.in  contour_set.cpp  dash_patterns.cpp  delineate.cpp  drawing_info.cpp  embedded_font.cpp  g4_instrument.tif  gouraud_polyline.cpp  gouraud_polytriangle.cpp  image.cpp  jeff.rgb  macro.cpp  notes.txt  obFont.cpp  object_node.cpp  pete.256  polygon.cpp  polyline.cpp  polymarker.cpp  text.cpp  text_halign.cpp  text_valign.cpp  user_hatch_pattern.cpp  userdata.cpp  whip_fill_library.h
samples/DWFToolkit/XPSTest_Mac_Linux/XPSTest.xcodeproj/: project.pbxproj
(+1397 files in other folders)
