#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
AC_PREREQ(2.61)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_CONFIG_SRCDIR(configure.in)
AM_INIT_AUTOMAKE(PublishMetadata, 1.0)
  
# Checks for programs.
AC_PROG_CXX

# Checks for libraries.
# Checks for header files.
# Checks for typedefs, structures, and compiler characteristics.
AC_CANONICAL_HOST
if test $host_vendor = apple;then
AC_SUBST(AM_LDFLAGS, ["-framework CoreServices"])
fi


# Checks for library functions.
AC_HAVE_LIBRARY(pthread, LIBS="$LIBS -lpthread", , )
AC_HAVE_LIBRARY(uuid, LIBS="$LIBS -luuid", , )
AC_HAVE_LIBRARY(dl, LIBS="$LIBS -ldl")

AC_OUTPUT( Makefile )
