AUTOMAKE_OPTIONS = nostdinc
INCLUDES = -I../.. -I../../dwf

XAML_includedir = $(pkgincludedir)/XAML

AM_CPPFLAGS = -DWHIP_USE_WCHAR_STRINGS 

XAML_include_HEADERS = \
        allclass.h \
        MemoryBuffer.h \
        OpcResourceMaterializer.h \
        OpcResourceSerializer.h \
        pch.h \
        resource.h \
        XamlArcSegment.h \
        XamlAttribute.h \
        XamlAttribute_Url.h \
        XamlBrushes.h \
        XamlCanvas.h \
        XamlClassFactory.h \
        XamlCode_Page.h \
        XamlColor.h \
        XamlColorMap.h \
        XamlContour_Set.h \
        XamlContrastColor.h \
        XamlCore.h \
        XamlDashPattern.h \
        XamlDelineate.h \
        XamlDrawable.h \
        XamlDrawableAttributes.h \
        XamlDwfHeader.h \
        XamlEllipse.h \
        XamlEmbed.h \
        XamlEmbeddedFont.h \
        XamlEndOfDwf.h \
        XamlFile.h \
        XamlFill.h \
        XamlFillPattern.h \
        XamlFontExtension.h \
        XamlFont.h \
        XamlFontUtil.h \
        XamlGlyphs.h \
        XamlGouraud_Polyline.h \
        XamlGouraud_Polytriangle.h \
        XamlGraphicsObject.h \
        XamlImage.h \
        XamlLayer.h \
        XamlLinePattern.h \
        XamlLineStyle.h \
        XamlLineWeight.h \
        XamlMacro_Definition.h \
        XamlMacro_Draw.h \
        XamlMacro_Index.h \
        XamlMacro_Scale.h \
        XamlMerge_Control.h \
        XamlNamed_View.h \
        XamlNamed_View_List.h \
        XamlObject.h \
        XamlObjectFactory.h \
        XamlObjectNode.h \
        XamlObject_Node.h \
        XamlOverpost.h \
        XamlParser.h \
        XamlPath.h \
        XamlPathGeometry.h \
        XamlPenPattern.h \
        XamlPNGGroup4Image.h \
        XamlPointset.h \
        XamlPolygon.h \
        XamlPolyline.h \
        XamlPolyLineSegment.h \
        XamlPolymarker.h \
        XamlPolytriangle.h \
        XamlProjection.h \
        XamlRendition.h \
        XamlRenditionPath.h \
        XamlResource.h \
        XamlResourceDictionaryParser.h \
        XamlText.h \
        XamlText_Background.h \
        XamlText_HAlign.h \
        XamlText_VAlign.h \
        xamlunits.h \
        XamlUnknown.h \
        XamlURL.h \
        XamlUserData.h \
        XamlUserFillPattern.h \
        XamlUserHatchPattern.h \
        XamlView.h \
        XamlViewport.h \
        XamlVisible.h \
        XamlW2XParser.h \
        XamlXML.h \
        xversion.h

libdwfXAML_la_SOURCES =  \
            pch.cpp \
            XamlArcSegment.cpp \
            XamlAttribute_Url.cpp \
            XamlBrushes.cpp \
            XamlCanvas.cpp \
            XamlClassFactory.cpp \
            XamlCode_Page.cpp \
            XamlColor.cpp \
            XamlColorMap.cpp \
            XamlContour_Set.cpp \
            XamlContrastColor.cpp \
            XamlDashPattern.cpp \
            XamlDelineate.cpp \
            XamlDrawable.cpp \
            XamlDrawableAttributes.cpp \
            XamlDwfHeader.cpp \
            XamlEllipse.cpp \
            XamlEmbed.cpp \
            XamlEmbeddedFont.cpp \
            XamlFile.cpp \
            XamlFill.cpp \
            XamlFillPattern.cpp \
            XamlFont.cpp \
            XamlFontExtension.cpp \
            XamlGlyphs.cpp \
            XamlGouraud_Polyline.cpp \
            XamlGouraud_Polytriangle.cpp \
            XamlGraphicsObject.cpp \
            XamlImage.cpp \
            XamlLayer.cpp \
            XamlLinePattern.cpp \
            XamlLineStyle.cpp \
            XamlLineWeight.cpp \
            XamlMacro_Definition.cpp \
            XamlMacro_Draw.cpp \
            XamlMacro_Index.cpp \
            XamlMacro_Scale.cpp \
            XamlMerge_Control.cpp \
            XamlNamed_View.cpp \
            XamlNamed_View_List.cpp \
            XamlObject.cpp \
            XamlObjectFactory.cpp \
            XamlObjectNode.cpp \
            XamlOverpost.cpp \
            XamlParser.cpp \
            XamlPath.cpp \
            XamlPathGeometry.cpp \
            XamlPenPattern.cpp \
            XamlPNGGroup4Image.cpp \
            XamlPointset.cpp \
            XamlPolygon.cpp \
            XamlPolyline.cpp \
            XamlPolyLineSegment.cpp \
	      XamlPolymarker.cpp \
            XamlPolytriangle.cpp \
            XamlProjection.cpp \
            XamlRendition.cpp \
            XamlRenditionPath.cpp \
            XamlResource.cpp \
            XamlResourceDictionaryParser.cpp \
            XamlText.cpp \
            XamlText_Background.cpp \
            XamlText_HAlign.cpp \
            XamlText_VAlign.cpp \
            XamlUnits.cpp \
	      XamlUnknown.cpp \
            XamlURL.cpp \
            XamlUserData.cpp \
            XamlUserFillPattern.cpp \
            XamlUserHatchPattern.cpp \
            XamlView.cpp \
            XamlViewport.cpp \
            XamlVisible.cpp \
            XamlW2XParser.cpp \
            XamlXML.cpp

noinst_LTLIBRARIES =  libdwfXAML.la

libdwfXAML_la_LDFLAGS = -avoid-version 

