AUTOMAKE_OPTIONS = nostdinc
INCLUDES = -I../..

expat_includedir = $(pkgincludedir)/expat
expat_include_HEADERS =  ascii.h asciitab.h expat.h iasciitab.h internal.h latin1tab.h macconfig.h nametab.h utf8tab.h winconfig.h xmlrole.h xmltok.h xmltok_impl.h expat_external.h
noinst_LTLIBRARIES =  libdwfcoreexpat.la
libdwfcoreexpat_la_LDFLAGS = -avoid-version 
libdwfcoreexpat_la_SOURCES = xmlparse.c xmlrole.c xmltok.c


