AUTOMAKE_OPTIONS = nostdinc
INCLUDES = -I$(top_srcdir)/..
METASOURCES = AUTO
zlib_includedir = $(pkgincludedir)/zlib
zlib_include_HEADERS =  deflate.h infblock.h infcodes.h inffast.h inffixed.h inftrees.h infutil.h trees.h zconf.h zlib.h zutil.h
noinst_LTLIBRARIES =  libdwfcorezlib.la
libdwfcorezlib_la_LDFLAGS = -avoid-version 
libdwfcorezlib_la_SOURCES = adler32.c compress.c crc32.c deflate.c infblock.c infcodes.c inffast.c inflate.c inftrees.c infutil.c maketree.c trees.c uncompr.c zutil.c

